--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WalSmart">
+        <activity android:name=".EditSet"></activity>
+        <activity android:name=".Products" />
+        <activity android:name=".Sets" />
+        <activity android:name=".Confirmation" />
+        <activity android:name=".Order" />
+        <activity android:name=".Basket" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
