--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WalSmart">
         <activity android:name=".EditSet"></activity>
-        <activity android:name=".Products" />
-        <activity android:name=".Sets" />
-        <activity android:name=".Confirmation" />
-        <activity android:name=".Order" />
-        <activity android:name=".Basket" />
+        <activity android:name=".ProductActivity" />
+        <activity android:name=".ProductSetActivity" />
+        <activity android:name=".ConfirmationActivity" />
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".BasketActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
