--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.WalSmart">
         <activity android:name=".EditSet"></activity>
         <activity android:name=".Product.ProductActivity" />
-        <activity android:name=".ProductSetActivity" />
+        <activity android:name=".ProductSet.ProductSetActivity" />
         <activity android:name=".ConfirmationActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".BasketActivity" />
