--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -4,26 +4,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/grocery"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WalSmart">
         <activity android:name=".ProductSet.EditSet"></activity>
-        <activity android:name=".Product.ProductActivity" />
-        <activity android:name=".ProductSet.ProductSetActivity" />
+        <activity android:name=".Product.ProductActivity" android:label="Products"/>
+        <activity android:name=".ProductSet.ProductSetActivity" android:label="Sets"/>
         <activity android:name=".ConfirmationActivity" />
         <activity android:name=".OrderActivity" />
-        <activity android:name=".Basket.BasketActivity" />
+        <activity android:name=".Basket.BasketActivity" android:label="Your basket"/>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
             android:theme="@style/Theme.WalSmart.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!--android:label="@string/app_name"-->
         </activity>
     </application>
 
