Creating custom sets and adding to the database (they are not displayed yet on the list)

--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -11,15 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WalSmart">
-        <activity android:name=".User.ResetActivity"   android:theme="@style/Theme.WalSmart.NoActionBar"></activity>
-        <activity android:name=".User.LogInActivity"   android:theme="@style/Theme.WalSmart.NoActionBar">
+        <activity android:name=".ProductSet.CreateSetActivity"></activity>
+        <activity
+            android:name=".User.ResetActivity"
+            android:theme="@style/Theme.WalSmart.NoActionBar" />
+        <activity
+            android:name=".User.LogInActivity"
+            android:theme="@style/Theme.WalSmart.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".User.SignUpActivity"   android:theme="@style/Theme.WalSmart.NoActionBar" />
+        <activity
+            android:name=".User.SignUpActivity"
+            android:theme="@style/Theme.WalSmart.NoActionBar" />
         <activity android:name=".ProductSet.EditSet" />
         <activity
             android:name=".Product.ProductActivity"
