--- a/WalSmart/app/src/main/AndroidManifest.xml
+++ b/WalSmart/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/grocery"
@@ -14,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WalSmart">
-        <activity android:name=".Order.OrderDate"></activity>
+        <activity android:name=".HandwrittenListActivity"></activity>
+        <activity android:name=".Order.OrderDate" />
         <activity android:name=".Product.CategoryActivity" />
         <activity android:name=".Order.MyOrdersActivity" />
         <activity android:name=".ProductSet.CreateSetActivity" />
@@ -47,6 +51,10 @@
         <activity
             android:name=".ProductSet.EditSet"
             android:label="Edit set" />
+
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="ocr" />
     </application>
 
 </manifest>
